# ros_practice

FinalTest/manipulator_modeling/: CMakeLists.txt
FinalTest/robot_test/: CMakeLists.txt
basics/my_client/: CMakeLists.txt  package.xml
basics/my_client_class/: CMakeLists.txt  package.xml
basics/my_publisher/: CMakeLists.txt  package.xml
basics/my_publisher_class/: CMakeLists.txt  package.xml
basics/my_server/: CMakeLists.txt  package.xml
basics/my_server_class/: CMakeLists.txt  package.xml
basics/my_subscriber/: CMakeLists.txt  package.xml
basics/my_subscriber_class/: CMakeLists.txt  package.xml
basics/my_turtlesim_controller/: CMakeLists.txt  package.xml
basics/pub_department_number/: CMakeLists.txt  package.xml
basics/pub_major/: CMakeLists.txt  package.xml
basics/pub_name/: CMakeLists.txt  package.xml
basics/pub_subject/: CMakeLists.txt  package.xml
basics/random_gen_x/: CMakeLists.txt  package.xml
basics/random_gen_y/: CMakeLists.txt  package.xml
basics/random_gen_yaw/: CMakeLists.txt  package.xml
basics/random_turtlesim_controller/: CMakeLists.txt  package.xml
basics/string_merger/: package.xml
eigen_practice/: CMakeLists.txt  package.xml
fourth_robot_navigation/: CMakeLists.txt  map_gen.sh  package.xml
get_homogenous_transform/: CMakeLists.txt  package.xml
mobile_robot/: package.xml
my_tf_practice/: CMakeLists.txt  package.xml
turtleCtrl/: CMakeLists.txt  package.xml
turtleCtrl/launch/: midterm.launch
turtleCtrl/src/: publishvel.cpp
ur5_description/: CMakeLists.txt  package.xml
(+77 files in other folders)
